changes to buttons

--- a/HotelOpened.html
+++ b/HotelOpened.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/responsive.css" type="text/css">    <!-- <link rel="stylesheet" href="./styles/form.css"> -->
-    <link rel="stylesheet" href="./styles/o.css" type="text/css">
+    <link rel="stylesheet" href="./styles/hotelOpened.css" type="text/css">
 
     <body>
         <div class="container">
@@ -52,15 +52,18 @@
             <!-- Header -->
             <header class="header hotel-header">  
                 <!-- <img class="header-image" src="./images/flights-header-image/drawable-xxxhdpi/flights-header-image.png" alt="airplane" width="100%" height="700"> -->
-                <button class="return-button"><span class="typicons-left"></span><a>Return To All Hotels</a></button>
-                <h1>Resorts just for you</h1>
-                <div class="search">
+                <div class="hotel-header-bg">
+                    <button class="return-button"><span class="typicons-left"></span><a>Return To All Hotels</a></button>
+                    <h1>Resorts just for you</h1>
+                    <div class="search">
                         <div class="form-group has-search">
-                        <span class="fa fa-search form-control-feedback"></span>
-                        <input type="text" class="form-control" placeholder="Search for a package">
-                    </div>
+                            <span class="fa fa-search form-control-feedback"></span>
+                            <input type="text" class="form-control" placeholder="Search for a package">
+                        </div>
                     <button class="search-button">Search</button>
-                </div>   
+                    </div>
+                </div>
+                   
             </header>
 
              <!-- Page content -->
