--- a/flightform.html
+++ b/flightform.html
@@ -48,7 +48,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="submit" class="header-button">Find Dream Hotel</button>
+                        <button type="submit" class=".form-submit-button">Find Dream Hotel</button>
                     </form>
                 </div>
             </div>
