--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
                 <!-- <img class="header-image" src="./images/flights-header-image/drawable-xxxhdpi/flights-header-image.png" alt="airplane" width="100%" height="700"> -->
                 <div class="header-menu">
                     <div class="nav-list">
-                        <button><a>Flights</a></button>
-                        <button><a href="">Hotels</a> </button>
+                        <a class="active" href="./flights.html">Flights</a>
+                        <a href="./hotels.html">Hotels</a>
+                        <div class="nav-border">
+                        <span></span>
+                        <span></span>
+                        </div>
                     </div>
-                    <!-- <p class="nav-border">
-                        <span></span>
-                        <span></span>
-                    </p> -->
+                    
                 </div>
                 <h1>Book for amazing flight deals</h1>
-                <button class="header-button index-header-button">flight Book Now <span class="fontawesome-chevron-right "></span></button>
+                <button class="header-button index-header-button">Book Flight Now <span class="fontawesome-chevron-right "></span></button>
             </header>
 
             <!-- Page content -->
