--- a/packageOpened.html
+++ b/packageOpened.html
@@ -52,18 +52,36 @@
             <!-- Header -->
             <header class=" selected-package-header">  
                 <!-- <img class="header-image" src="./images/flights-header-image/drawable-xxxhdpi/flights-header-image.png" alt="airplane" width="100%" height="700"> -->
-                <button class="return-button"><span class="typicons-left"></span><a>Return To All Hotels</a></button>
-                <div class="selected-package-heading">
-                    <h1 class="package-type">Destination Weddings</h1>
-                    <h1 class="package-destination">Dubai</h1>
-                </div>
-                <div class="search">
-                        <div class="form-group has-search">
-                        <span class="fa fa-search form-control-feedback"></span>
-                        <input type="text" class="form-control" placeholder="Search for a package">
+                <div class="selected-package-header-bg">
+                    <button class="return-button"><span class="typicons-left"></span><a>Return To All Hotels</a></button>
+                    <div class="selected-package-heading">
+                        <h1 class="package-type">Destination Weddings</h1>
+                        <h1 class="package-destination">Dubai</h1>
                     </div>
+                    <div class="search">
+                        <div class="form-group has-search">
+                            <span class="fa fa-search form-control-feedback"></span>
+                            <input type="text" class="form-control" placeholder="Search for a package">
+                        </div>
                     <button class="search-button">Search</button>
-                </div>   
+                    </div>   
+                </div>
+
+                <!-- <div class="selected-package-header-bg">
+                    <button class="return-button"><span class="typicons-left"></span><a>Return To All Hotels</a></button>
+                    <div class="selected-package-heading">
+                        <h1 class="package-type">Destination Weddings</h1>
+                        <h1 class="package-destination">Dubai</h1>
+                    </div>
+                    <div class="search">
+                        <div class="form-group has-search">
+                            <span class="fa fa-search form-control-feedback"></span>
+                            <input type="text" class="form-control" placeholder="Search for a package">
+                        </div>
+                    <button class="search-button">Search</button>
+                    </div>
+                </div> -->
+                
             </header>
 
              <!-- Page content -->
