--- a/packages.html
+++ b/packages.html
@@ -52,17 +52,19 @@
             <!-- Header -->
             <header class="header packages-header">  
                 <!-- <img class="header-image" src="./images/flights-header-image/drawable-xxxhdpi/flights-header-image.png" alt="airplane" width="100%" height="700"> -->
-                <h2>We offer the best Packages</h2>
-                <p>Jump start your experience with our awesome packages</p>
-
-               <div class="package-header-button">
-                    <button class="package-button">Aircraft Charter</button>
-                    <button class="package-button">Airport Pick-up & Drop</button>
-                    <button class="package-button">Destination Weddings</button>
-                    <button class="package-button">Flight Ticket Booking</button>
-                    <button class="package-button">Tour Packages</button>
-                    <button class="package-button">Seminar Planning</button> 
-               </div> 
+                <div class="packages-header-bg">
+                    <h2>We offer the best Packages</h2>
+                    <p>Jump start your experience with our awesome packages</p>
+    
+                   <div class="package-header-button">
+                        <button class="package-button">Aircraft Charter</button>
+                        <button class="package-button">Airport Pick-up & Drop</button>
+                        <button class="package-button">Destination Weddings</button>
+                        <button class="package-button">Flight Ticket Booking</button>
+                        <button class="package-button">Tour Packages</button>
+                        <button class="package-button">Seminar Planning</button> 
+                   </div> 
+                </div>
             </header>
 
             <!-- Page content -->
