--- a/hotdeals.html
+++ b/hotdeals.html
@@ -54,7 +54,7 @@
                 <!-- <img class="header-image" src="./images/flights-header-image/drawable-xxxhdpi/flights-header-image.png" alt="airplane" width="100%" height="700"> -->
                 <h2>Amazing Deals Just For You</h2>
                 <p>At Juyonna we regularly provide deals for your<br> customers. What are you waiting for?Grab this<br> opportunity</p>
-                <button class="header-button">flight Book Now <span class="fontawesome-chevron-right "></span></button>
+                <button class="header-button">Find My Perfect Deal <span class="fontawesome-chevron-right "></span></button>
             </header>
 
             <!-- Page content -->
@@ -130,7 +130,7 @@
                     <h1>N</h1>
                     <h3>Payments made easy!</h3>
                     <p>Need to make a  quick payment for our service?We have you covered.</p>
-                    <button class="payment-button">Explore All Packages <span class="fontawesome-chevron-right "></span></button>
+                    <button class="payment-button"><a href="./payment.html">Make Payment Now </a> <span class="fontawesome-chevron-right "></span></button>
                     <P><img src="./images/logo-mobile/drawable-mdpi/logo-mobile.png"></P>
                 </div>
                 
