--- a/reservation.html
+++ b/reservation.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/responsive.css" type="text/css">
+    <!-- <link rel="stylesheet" href="./styles/responsive.css" type="text/css"> -->
     <link rel="stylesheet" href="./styles/form.css" type="text/css">
 
     <body>
@@ -16,20 +16,25 @@
                 <!--Resevation form-->
                 <div class="reservation-form">
                     <form>
-                        <h2>Make Reservation</h2>
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                              <label for="inputFullName">Full Name</label>
-                              <input type="text" class="form-control" id="inputFullName" >
+                        <div class="form-content">
+                            <h2>Make Reservation</h2>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                  <label for="inputFullName">Full Name</label>
+                                  <input type="text" class="form-control" id="inputFullName" >
+                                </div>
+                                <div class="form-group col-md-6">
+                                  <label for="inputEmail4">Email Address</label>
+                                  <input type="email" class="form-control" id="inputEmail4" >
+                                </div> 
                             </div>
-                            <div class="form-group col-md-6">
-                              <label for="inputEmail4">Email Address</label>
-                              <input type="email" class="form-control" id="inputEmail4" >
-                            </div> 
+                            <div class="submit-button">
+                                <button  type="submit" >Submit Reservation<span class="fontawesome-chevron-right"></span></button>    
+
+                            </div>
                         </div>
-                        <button type="submit" class="header-button">Submit Reservation<span class="fontawesome-chevron-right"></span></button>
-                        <div class="form-p">
-                            <p>We would follow up ypur reservation via email</p>
+                        <div class="form-note">
+                            <p>We would follow up your reservation via email</p>
                         </div>
                     <form>
             </div>
